perf: validator & func params
